# mcp-course-fork

projects/unit3/build-mcp-server/pr-agent/: pyproject.toml
projects/unit3/build-mcp-server/pr-agent/src/pr_agent/: __main__.py  server.py
projects/unit3/build-mcp-server/starter/: server.py
projects/unit3/github-actions-integration/pr-agent-actions/: README.md  pyproject.toml
projects/unit3/github-actions-integration/pr-agent-actions/src/pr_agent_actions/: __init__.py  __main__.py  server.py
units/en/unit2/: gradio-client.mdx
