[project]
name = "pr-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "J0NA5-jpg", email = "mertens_jm@outlook.com" }
]
requires-python = ">=3.14"
dependencies = [
    "mcp[cli]>=1.0.0",
]

[project.scripts]
pr-agent = "pr_agent:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
